[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemies/EnemyDrone.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=5]

[sub_resource type="SphereMesh" id=1]
rings = 5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.913725, 0.0980392, 0.0980392, 1 )

[sub_resource type="SphereMesh" id=3]
radius = 0.75
height = 1.5
rings = 5

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="SphereShape" id=7]
radius = 2.0

[sub_resource type="SphereShape" id=6]
radius = 50.0

[node name="EnemyDrone" type="KinematicBody" groups=["Enemy"]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="Los" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -200 )
collision_mask = 7

[node name="Head" type="Spatial" parent="."]

[node name="Head" type="MeshInstance" parent="Head"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Eye" type="MeshInstance" parent="Head/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="FireHole" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="ExplosionRange" type="Area" parent="."]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="ExplosionRange"]
shape = SubResource( 7 )

[node name="DetectionRange" type="Area" parent="."]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionRange"]
shape = SubResource( 6 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ExplosionRange" to="." method="_on_ExplosionRange_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
